# KML-16S-2

./: .gitignore  README.md  main.py  pyproject.toml
assets/: graphlan.yaml  metadata.tsv  microplot.yaml
config/: conda_env.yaml  database.yaml
kml_16s_2/: __init__.py  config.py  fastq.py  snakemake.py
scripts/: alpha_diversity.R  alpha_rank_abundance_curve.R  alpha_rare_curve.R  alpha_specaccum.R  beta_Adonis.R  beta_NMDS.R  beta_PCOA_by_matrix.R  beta_UPGMA.R  beta_heatmap.R  combine_alpha_diversity_stat.py  diff_OPLS-DA.R  diff_PLS-DA.R  diff_PLS-DA_vs_OPLS-DA.R  diff_lefse.R  diff_otu_PCA.R  diff_otu_venn.R  diff_random_forest.R  filtered_metadata_samples.py  ggpicrust2.R  lefse_plot.R  network.R  phylogeny_tree_plot.R  select_sampling_depth_v2.py  snapshot_krona_html.js  snapshot_qiime2_demux_qplot_left.js  snapshot_qiime2_demux_qplot_right.js  table_to_graphlan_input.py  table_to_hclust2_input.py  table_to_krona_input.py  taxa_barplot.R
template/: sample_table.tsv  sample_table.xlsx
tests/: test_fastq.py  test_snakemake.py
wf-16s/: Snakefile
wf-16s/envs/: LefSe.yaml  basic.yaml  graphlan.yaml  microplot.yaml  python3.8.yaml  qiime2-2023.2.yaml
wf-16s/rules/: diff_plot.smk  diversity_alpha.smk  diversity_alpha_rarefaction.smk  diversity_beta.smk  diversity_core_metrics.smk  diversity_plots.smk  fastqc.smk  feature_dada2.smk  feature_fq_import.smk  feature_phylogeny.smk  picrust.smk  qc_multiqc.smk  taxa.smk
wf-16s/scripts/: fastp_all_samples_qc.py
